--- a/app/src/main/res/layout/item_log_list.xml
+++ b/app/src/main/res/layout/item_log_list.xml
@@ -2,8 +2,11 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_margin="16dp"
     android:background="@android:color/white"
+    card_view:cardElevation="6dp"
+    card_view:cardCornerRadius="16dp"
     android:elevation="6dp"
     android:radius="16dp">
 
@@ -105,7 +108,7 @@
             android:layout_height="wrap_content"
             android:text="오늘은 날씨가 좋아서 열심히 쓰레기를 주웠다. 담배꽁초가 유독 많았다..."
             android:textSize="14sp"
-            android:textColor="#444444"
+            android:textColor="@color/text_grey"
             android:maxLines="2"
             android:ellipsize="end"
             android:layout_marginTop="6dp" />
