--- a/app/src/main/res/layout/fragment_log_list.xml
+++ b/app/src/main/res/layout/fragment_log_list.xml
@@ -32,13 +32,15 @@
     <!-- 캘린더 버튼 -->
     <ImageView
         android:id="@+id/btn_calendar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="12dp"
+        android:layout_gravity="center"
         android:src="@drawable/ic_calendar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <!-- 일지 목록 RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
@@ -48,11 +50,13 @@
         android:padding="16dp"
         android:clipToPadding="false"
         android:layout_marginBottom="100dp"
+        android:layout_marginTop="20dp"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
+        app:layout_constraintTop_toBottomOf="@id/btn_calendar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
