--- a/app/src/main/res/layout/item_log_summary.xml
+++ b/app/src/main/res/layout/item_log_summary.xml
@@ -2,10 +2,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="16dp"
     android:background="@android:color/white"
     android:elevation="6dp"
-    android:radius="16dp">
+    android:radius="16dp"
+    app:cardElevation="0dp"
+    app:cardCornerRadius="16dp">
 
     <!-- 상세보기 버튼-->
     <ImageButton
