--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="main_color">#B1DFFF</color>
     <color name="sub_color">#5AB4F4</color>
     <color name="support_color">#72BFF7</color>
+    <color name="text_accent_color">#E6F4FF</color>
 
     <color name="grey">#D9D9D9</color>
     <color name="text_grey">#595E6A</color>
