--- a/app/src/main/res/layout/layout_plogging_record_today.xml
+++ b/app/src/main/res/layout/layout_plogging_record_today.xml
@@ -9,6 +9,7 @@
         android:id="@+id/layout_plogging_record_trash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
@@ -20,7 +21,7 @@
             android:fontFamily="@font/noto_sans_kr_semi_bold"
             android:includeFontPadding="false"
             android:text="0"
-            android:textSize="35sp" />
+            android:textSize="32sp" />
 
         <TextView
             android:id="@+id/tv_unit_record_trash"
@@ -59,7 +60,7 @@
             android:fontFamily="@font/noto_sans_kr_semi_bold"
             android:includeFontPadding="false"
             android:text="0"
-            android:textSize="35sp" />
+            android:textSize="32sp" />
 
         <TextView
             android:id="@+id/tv_unit_record_time"
@@ -98,7 +99,7 @@
             android:fontFamily="@font/noto_sans_kr_semi_bold"
             android:includeFontPadding="false"
             android:text="0"
-            android:textSize="35sp" />
+            android:textSize="32sp" />
 
         <TextView
             android:id="@+id/tv_unit_record_dist"
