feat: 캘린더 화면 ui 수정 #65

--- a/app/src/main/res/layout/month_header_view.xml
+++ b/app/src/main/res/layout/month_header_view.xml
@@ -25,12 +25,12 @@
         android:orientation="horizontal">
 
         <!-- 요일 7개 -->
+        <TextView style="@style/CalendarDayHeaderStyle" android:textColor="#E03220"/>
         <TextView style="@style/CalendarDayHeaderStyle"/>
         <TextView style="@style/CalendarDayHeaderStyle"/>
         <TextView style="@style/CalendarDayHeaderStyle"/>
         <TextView style="@style/CalendarDayHeaderStyle"/>
         <TextView style="@style/CalendarDayHeaderStyle"/>
-        <TextView style="@style/CalendarDayHeaderStyle"/>
-        <TextView style="@style/CalendarDayHeaderStyle"/>
+        <TextView style="@style/CalendarDayHeaderStyle" android:textColor="#2557A0"/>
     </LinearLayout>
 </LinearLayout>
