--- a/app/src/main/res/layout/fragment_journal.xml
+++ b/app/src/main/res/layout/fragment_journal.xml
@@ -30,21 +30,18 @@
         android:layout_margin="20dp"/>
 
     <!-- 목록으로 이동 버튼 -->
-    <Button
+    <ImageView
         android:id="@+id/buttonLogList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="목록으로 이동"
-        android:layout_gravity="center"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:gravity="center"
-        android:layout_marginLeft="12dp"
-        android:textAllCaps="false"
-        android:backgroundTint="@android:color/white"
-        android:textColor="@android:color/black"
-        android:includeFontPadding="false"
+        android:src="@drawable/btn_journal_to_list"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:fontFamily="@font/noto_sans_kr_regular"/>
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/calendarCard"
@@ -84,8 +81,8 @@
         android:text="기록을 확인할 날짜를 선택해 주세요"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="20dp"
         android:layout_marginBottom="4dp"
         app:layout_constraintTop_toBottomOf="@id/calendarCard"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -95,7 +92,7 @@
         android:id="@+id/logViewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="14dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintTop_toBottomOf="@id/calendarCard"
         app:layout_constraintStart_toStartOf="parent"
