--- a/app/src/main/res/layout/fragment_insta_share.xml
+++ b/app/src/main/res/layout/fragment_insta_share.xml
@@ -4,105 +4,112 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InstaShareFragment"
-    android:background="#CC000000">
+    android:background="#80000000"
+    tools:context=".InstaShareFragment">
 
-
-    <LinearLayout
+    <!-- 메인 컨텐츠 박스 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/img_sticker_layout"
-        android:layout_width="300dp"
-        android:layout_height="500dp"
-        android:layout_marginTop="72dp"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/bg_square_white"
-        android:orientation="vertical"
+        android:layout_marginBottom="55dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <!-- 상단 아이콘 + 제목 -->
+        <ImageView
+            android:id="@+id/iv_insta_icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_app_circle"
+            app:layout_constraintBottom_toTopOf="@+id/img_insta_share"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_insta_share_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/noto_sans_kr_semi_bold"
+            android:includeFontPadding="false"
+            android:maxLines="1"
+            android:text="플로깅 제목"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_insta_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_insta_icon"
+            app:layout_constraintTop_toTopOf="@+id/iv_insta_icon" />
+
+        <!-- 이미지 콘텐츠 -->
+        <ImageView
+            android:id="@+id/img_insta_share"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_app_default"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_insta_icon" />
 
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="34dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:src="@drawable/ic_app_circle" />
-
-            <TextView
-                android:id="@+id/tv_insta_share_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:ellipsize="end"
-                android:fontFamily="@font/noto_sans_kr_bold"
-                android:includeFontPadding="false"
-                android:maxLines="1"
-                android:text="플로깅 제목"
-                android:textSize="15dp" />
-
-        </LinearLayout>
-
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/img_insta_share"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_app_default" />
-        </FrameLayout>
-
+        <!-- 날짜 -->
         <TextView
             android:id="@+id/tv_insta_share_date"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:fontFamily="@font/noto_sans_kr_bold"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/noto_sans_kr_regular"
             android:includeFontPadding="false"
             android:text="yyyy년 mm월 dd일"
-            android:textSize="12dp" />
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/img_insta_share" />
 
+        <!-- 내용 -->
         <TextView
             android:id="@+id/tv_insta_share_content"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="13dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="15dp"
             android:ellipsize="end"
-            android:fontFamily="@font/noto_sans_kr_regular"
+            android:fontFamily="@font/noto_sans_kr_medium"
             android:includeFontPadding="false"
             android:maxLines="3"
             android:text="내용"
-            android:textSize="12dp" />
-    </LinearLayout>
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_insta_share_date" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- 인스타 공유 버튼 -->
     <FrameLayout
         android:id="@+id/btn_insta_share"
-        android:layout_width="180dp"
-        android:layout_height="55dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_sticker_layout"
-        app:layout_constraintVertical_bias="0.161"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
-        android:background="@android:color/transparent">
+        android:background="@android:color/transparent"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/img_sticker_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/iv_insta_share"
@@ -119,23 +126,23 @@
             android:gravity="center"
             android:includeFontPadding="false"
             android:text="instagrm에 공유"
-            android:textSize="18sp" />
+            android:textSize="14sp" />
     </FrameLayout>
 
+    <!-- 닫기 버튼 -->
     <TextView
         android:id="@+id/btn_insta_share_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_kr_semi_bold"
+        android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
-        android:text="X 창 닫기"
+        android:text="X  창 닫기"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_insta_share"
-        app:layout_constraintVertical_bias="0.141" />
-
+        app:layout_constraintTop_toBottomOf="@+id/btn_insta_share" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
