--- a/app/src/main/res/layout/day_view.xml
+++ b/app/src/main/res/layout/day_view.xml
@@ -4,21 +4,49 @@
     android:layout_height="48dp"
     android:layout_margin="4dp">
 
-    <TextView
-        android:id="@+id/dayText"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:textColor="@android:color/black"
-        android:background="@android:color/transparent"
-        android:textSize="14sp" />
+<!--    <ImageView-->
+<!--        android:id="@+id/dayIcon"-->
+<!--        android:layout_width="25dp"-->
+<!--        android:layout_height="25dp"-->
+<!--        android:layout_gravity="top|end"-->
+<!--        android:layout_margin="4dp"-->
+<!--        android:src="@drawable/ic_star_one"-->
+<!--        android:visibility="gone" />-->
 
-    <ImageView
-        android:id="@+id/dayIcon"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_gravity="top|end"
-        android:layout_margin="4dp"
-        android:src="@drawable/ic_unit_24"
-        android:visibility="gone" />
+<!--    <TextView-->
+<!--        android:id="@+id/dayText"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:gravity="center"-->
+<!--        android:textColor="@android:color/black"-->
+<!--        android:background="@android:color/transparent"-->
+<!--        android:fontFamily="@font/noto_sans_kr_medium"-->
+<!--        android:textSize="14sp" />-->
+
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- 아이콘 (날짜 아래 배경처럼) -->
+        <ImageView
+            android:id="@+id/dayIcon"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="top|end"
+            android:visibility="gone"
+            android:src="@drawable/ic_star_one" />
+
+        <!-- 날짜 텍스트 -->
+        <TextView
+            android:id="@+id/dayText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:textColor="@android:color/black"
+            android:background="@android:color/transparent"
+            android:fontFamily="@font/noto_sans_kr_medium"/>
+    </FrameLayout>
+
 </FrameLayout>
