--- a/app/src/main/res/layout/fragment_journal.xml
+++ b/app/src/main/res/layout/fragment_journal.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="20dp"/>
 
-    <!-- 목록으로 이동 버튼 -->
+    <!-- 일지 모아보기 이동 버튼 -->
     <ImageView
         android:id="@+id/buttonLogList"
         android:layout_width="35dp"
@@ -39,8 +39,19 @@
         android:layout_marginEnd="25dp"
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
+        app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/text_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="일지 List"
+        android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:fontFamily="@font/noto_sans_kr_regular"/>
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="20dp"
+        android:fontFamily="@font/noto_sans_kr_regular"
+        android:includeFontPadding="false"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogList"/>
 
 
     <androidx.cardview.widget.CardView
@@ -52,7 +63,7 @@
         android:layout_marginTop="12dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="0dp"
-        app:layout_constraintTop_toBottomOf="@id/buttonLogList"
+        app:layout_constraintTop_toBottomOf="@id/text_list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -79,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="기록을 확인할 날짜를 선택해 주세요"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         android:layout_marginTop="4dp"
         android:layout_marginStart="20dp"
