--- a/app/src/main/res/layout/fragment_log_list.xml
+++ b/app/src/main/res/layout/fragment_log_list.xml
@@ -29,34 +29,140 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="20dp"/>
 
-    <!-- 캘린더 버튼 -->
+    <!-- 캘린더 이동 버튼 -->
     <ImageView
         android:id="@+id/btn_calendar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="12dp"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_calendar"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:gravity="center"
+        android:src="@drawable/btn_list_to_journal"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
         app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/text_caledar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="캘린더"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="20dp"
+        android:fontFamily="@font/noto_sans_kr_regular"
+        android:includeFontPadding="false"
+        app:layout_constraintTop_toBottomOf="@+id/btn_calendar"/>
 
 
-    <!-- 일지 목록 RecyclerView -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/log_list_recycler"
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/logListBox"-->
+<!--        android:layout_width="350dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        app:cardCornerRadius="16dp"-->
+<!--        app:cardElevation="0dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/btn_calendar"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:layout_marginBottom="100dp">-->
+<!--        &lt;!&ndash; 일지 목록 RecyclerView &ndash;&gt;-->
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/log_list_recycler"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:padding="16dp"-->
+<!--            android:clipToPadding="false"-->
+<!--            android:layout_marginBottom="80dp"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:overScrollMode="never"-->
+<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/btn_calendar"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent" />-->
+<!--        </androidx.cardview.widget.CardView>-->
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/logListBox"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="16dp"
-        android:clipToPadding="false"
-        android:layout_marginBottom="100dp"
-        android:layout_marginTop="20dp"
-        android:overScrollMode="never"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/btn_calendar"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="80dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="0dp"
+        android:background="#9ECDEE"
+        app:layout_constraintTop_toBottomOf="@id/text_caledar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- 내부: 제목 + RecyclerView -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#9ECDEE"
+            android:orientation="vertical">
+        <!-- 제목 영역 -->
+            <!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:gravity="center"-->
+<!--                android:background="@color/white"-->
+<!--                android:radius="6dp">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/textLogListTitle"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="일지 List"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:padding="3dp"-->
+<!--                    android:gravity="center"-->
+<!--                    android:layout_marginLeft="50dp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:includeFontPadding="false"-->
+<!--                    android:textColor="@android:color/black"-->
+<!--                    android:fontFamily="@font/noto_sans_kr_medium" />-->
+<!--            </LinearLayout>-->
+
+            <!-- RecyclerView -->
+            <TextView
+                android:id="@+id/textLogListTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/bg_loglist_title_box"
+                android:fontFamily="@font/noto_sans_kr_medium"
+                android:includeFontPadding="false"
+                android:paddingStart="32dp"
+                android:paddingTop="1dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="2dp"
+                android:text="일지 List"
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/log_list_recycler"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_marginTop="8dp"
+                android:background="#9ECDEE"
+                android:padding="12dp"
+                android:clipToPadding="false"
+                android:overScrollMode="never" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
