--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,9 +39,10 @@
     <!-- 캐릭터 이미지 -->
     <ImageView
         android:id="@+id/iv_app_character"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginVertical="30dp"
+        android:layout_marginVertical="15dp"
+        android:paddingTop="20dp"
         android:src="@drawable/img_app_character"
         app:layout_constraintBottom_toTopOf="@+id/btn_home_plogging"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +54,7 @@
         android:id="@+id/btn_home_plogging"
         android:layout_width="180dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="140dp"
+        android:layout_marginBottom="130dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
