--- a/app/src/main/res/layout/fragment_onboarding_guide.xml
+++ b/app/src/main/res/layout/fragment_onboarding_guide.xml
@@ -26,8 +26,7 @@
         android:layout_marginBottom="40dp"
         android:background="@drawable/bg_square_white_grey_15"
         app:layout_constraintBottom_toTopOf="@+id/layout_guide_btn"
-        app:layout_constraintTop_toBottomOf="@+id/ic_app_sloplo"
-        tools:layout_editor_absoluteX="25dp" />
+        app:layout_constraintTop_toBottomOf="@+id/ic_app_sloplo"/>
 
     <TextView
         android:id="@+id/tv_guide_title"
@@ -61,7 +60,8 @@
         android:id="@+id/iv_guide_content"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:src="@drawable/img_guide"
+        android:src="@drawable/img_guide_1"
+        android:layout_marginVertical="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_guide_content"
         app:layout_constraintBottom_toBottomOf="@+id/iv_guide_background"
         app:layout_constraintStart_toStartOf="@+id/iv_guide_background"
