--- a/app/src/main/res/drawable/btn_journal_to_list.xml
+++ b/app/src/main/res/drawable/btn_journal_to_list.xml
@@ -1,35 +1,35 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="1418dp"
-    android:height="1446dp"
-    android:viewportWidth="1418"
-    android:viewportHeight="1446">
+    android:width="216dp"
+    android:height="216dp"
+    android:viewportWidth="216"
+    android:viewportHeight="216">
   <path
-      android:pathData="M0,723a709,723 0,1 0,1418 0a709,723 0,1 0,-1418 0z"
-      android:fillColor="#5AB4F3"/>
+      android:pathData="M108,108m-108,0a108,108 0,1 1,216 0a108,108 0,1 1,-216 0"
+      android:fillColor="#7CBEED"/>
   <path
-      android:pathData="M249.1,502a46.8,47.7 0,1 0,93.6 0a46.8,47.7 0,1 0,-93.6 0z"
+      android:pathData="M53.13,75.13m-7.13,0a7.13,7.13 0,1 1,14.26 0a7.13,7.13 0,1 1,-14.26 0"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M249.1,722a46.8,47.7 0,1 0,93.6 0a46.8,47.7 0,1 0,-93.6 0z"
+      android:pathData="M53.13,107.99m-7.13,0a7.13,7.13 0,1 1,14.26 0a7.13,7.13 0,1 1,-14.26 0"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M249.1,946.1a46.8,47.7 0,1 0,93.6 0a46.8,47.7 0,1 0,-93.6 0z"
+      android:pathData="M53.13,141.46m-7.13,0a7.13,7.13 0,1 1,14.26 0a7.13,7.13 0,1 1,-14.26 0"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M448.5,499H1168.9"
-      android:strokeWidth="79.9302"
+      android:pathData="M76.38,74.84H169.38"
+      android:strokeWidth="11.9398"
       android:fillColor="#00000000"
       android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M448.5,718.9H1168.9"
-      android:strokeWidth="79.9302"
+      android:pathData="M76.38,106.84H169.38"
+      android:strokeWidth="11.9398"
       android:fillColor="#00000000"
       android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M448.5,943H1168.9"
-      android:strokeWidth="79.9302"
+      android:pathData="M76.38,140.84H169.38"
+      android:strokeWidth="11.9398"
       android:fillColor="#00000000"
       android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
