--- a/app/src/main/res/layout/item_log_list.xml
+++ b/app/src/main/res/layout/item_log_list.xml
@@ -1,157 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
-    android:background="@android:color/white"
-    card_view:cardElevation="4dp"
-    card_view:cardCornerRadius="16dp"
-    android:elevation="6dp"
-    android:radius="16dp">
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="10dp"
+    android:padding="15dp"
+    android:background="@drawable/bg_square_white">
 
-    <!-- 상세보기 버튼 -->
-    <ImageButton
-        android:id="@+id/buttonDetail"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_gravity="end"
-        android:padding="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:background="@android:color/transparent"
-        android:backgroundTint="@android:color/transparent"
-        android:contentDescription="상세보기"
-        android:src="@drawable/ic_arrow_forward" />
-
-    <LinearLayout
-        android:padding="15dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <!-- 날짜, 시간, 거리 -->
-        <LinearLayout
-            android:orientation="horizontal"
+        <TextView
+            android:id="@+id/summaryDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp">
+            android:text=" 2025.04.11"
+            android:textSize="12sp"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:includeFontPadding="false"
+            android:textColor="@color/text_grey"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_marginTop="1dp"
-                android:src="@drawable/ic_calendar_text" />
-            <TextView
-                android:id="@+id/summaryDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:fontFamily="@font/tmoney_round_wind_regular"
-                android:text=" 2025.04.11"
-                android:textColor="@android:color/black"
-                android:textSize="13sp" />
+        <ImageView
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:src="@drawable/ic_view_log_detail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:src="@drawable/ic_time" />
-            <TextView
-                android:id="@+id/summaryTime"
-                android:text=" 50분"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="13sp"
-                android:layout_marginEnd="12dp"
-                android:fontFamily="@font/tmoney_round_wind_regular"
-                android:textColor="@android:color/black" />
+        <!-- 시간 -->
+        <ImageView
+            android:id="@+id/iconTime"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:src="@drawable/ic_time"
+            app:layout_constraintBottom_toBottomOf="@+id/summaryTrash"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/summaryTrash" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:src="@drawable/ic_distance" />
-            <TextView
-                android:id="@+id/summaryDistance"
-                android:text=" 2.5km"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/tmoney_round_wind_regular"
-                android:textSize="13sp"
-                android:textColor="@android:color/black" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/summaryTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" 50분"
+            android:textSize="12sp"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:includeFontPadding="false"
+            app:layout_constraintStart_toEndOf="@id/iconTime"
+            app:layout_constraintTop_toTopOf="@id/iconTime"
+            app:layout_constraintBottom_toBottomOf="@+id/iconTime" />
+
+        <!-- 거리 -->
+        <ImageView
+            android:id="@+id/iconDistance"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:src="@drawable/ic_distance"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toEndOf="@id/summaryTime"
+            app:layout_constraintTop_toTopOf="@id/summaryTime"
+            app:layout_constraintBottom_toBottomOf="@+id/summaryTime" />
+
+        <TextView
+            android:id="@+id/summaryDistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:includeFontPadding="false"
+            android:text=" 2.5km"
+            android:textSize="12sp"
+            android:layout_marginStart="5dp"
+            app:layout_constraintStart_toEndOf="@id/iconDistance"
+            app:layout_constraintTop_toTopOf="@id/iconDistance"
+            app:layout_constraintBottom_toBottomOf="@+id/iconDistance" />
 
         <!-- 제목 -->
         <TextView
             android:id="@+id/summaryTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_kr_extra_bold"
             android:text="담배꽁초 50개 주움"
+            android:textSize="14sp"
+            android:fontFamily="@font/noto_sans_kr_semi_bold"
             android:includeFontPadding="false"
-            android:textSize="16sp" />
-
-        <!-- 주소 -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_marginTop="14dp"
-                android:src="@drawable/ic_address_text" />
-
-            <TextView
-                android:id="@+id/summaryAddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/noto_sans_kr_regular"
-                android:includeFontPadding="false"
-                android:text=" 대한민국 서울특별시 영등포구 선유동 2로 42"
-                android:textSize="12sp" />
-        </LinearLayout>
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <!-- 쓰레기 개수 -->
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
         <ImageView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/ic_bin_text" />
+            android:id="@+id/iconTrash"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_bin_text"
+            app:layout_constraintTop_toBottomOf="@id/summaryContent"
+            app:layout_constraintStart_toEndOf="@id/summaryDistance" />
+
         <TextView
             android:id="@+id/summaryTrash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" 수거한 쓰레기: 50개"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/noto_sans_kr_regular"
             android:includeFontPadding="false"
-            android:fontFamily="@font/noto_sans_kr_medium"
-            android:textSize="13sp"
-            android:layout_marginTop="6dp"/>
-    </LinearLayout>
+            android:text="50개"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@id/iconTrash"
+            app:layout_constraintTop_toTopOf="@id/iconTrash"
+            app:layout_constraintBottom_toBottomOf="@+id/iconTrash" />
 
         <!-- 본문 미리보기 -->
         <TextView
             android:id="@+id/summaryContent"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="오늘은 날씨가 좋아서 열심히 쓰레기를 주웠다. 담배꽁초가 유독 많았다..."
-            android:textSize="14sp"
-            android:fontFamily="@font/noto_sans_kr_regular"
-            android:textColor="@color/text_grey"
-            android:maxLines="2"
+            android:layout_marginTop="6dp"
             android:ellipsize="end"
-            android:includeFontPadding="false"
-            android:lineSpacingExtra="0dp"
-            android:layout_marginTop="6dp" />
-    </LinearLayout>
+            android:maxLines="1"
+            android:text="오늘은 날씨가 좋아서 열심히 쓰레기를 주웠다. 담배꽁초가 유독 많았다..."
+            android:textColor="@color/text_grey"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/summaryTitle" />
 
-</androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
