--- a/app/src/main/res/layout/month_header_view.xml
+++ b/app/src/main/res/layout/month_header_view.xml
@@ -13,9 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2025년 5월"
-        android:textStyle="bold"
         android:textSize="16sp"
-        android:layout_marginBottom="8dp"/>
+        android:fontFamily="@font/noto_sans_kr_semi_bold"
+        android:includeFontPadding="false"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"/>
 
     <!-- 요일 헤더 -->
     <LinearLayout
