design: 봉사 모아보기 관련 레이아웃 수정 #88

--- a/app/src/main/res/layout/fragment_region_volunteer.xml
+++ b/app/src/main/res/layout/fragment_region_volunteer.xml
@@ -22,7 +22,7 @@
         android:id="@+id/container_white_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@android:color/white"
+        android:background="@drawable/bg_square_white_top_20"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="0dp"
         app:layout_constraintTop_toBottomOf="@id/ic_app_sloplo"
@@ -51,6 +51,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="100dp"
+            android:paddingHorizontal="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
